# colorbar

./: .gitignore  CMakeLists.txt  package.scm
shaders/: triangle.frag  triangle.vert
src/: config.h  main.c  shader.c  shader.h
